# sita

./: .gitignore  ConnectionSelectionScreen.py  FinishScreen.py  InstallDependencies.py  TermsScreen.py  WelcomeScreen.py  WiredScreen.py  WirelessScreen.py  main.py  pyproject.toml
navigation/: router.py
services/: adb_service.py  device_info.py  device_setup_base.py  paths.py  wifi_qr_pairing.py  wired_setup.py  wireless_setup.py
services/adb/: adb_service.py
services/device_setup/: device_discovery.py  device_setup_base.py  wired_setup.py  wireless_setup.py
services/installers/: base.py  factory.py  install_worker.py  linux.py  macos.py  windows.py
ui/: app.py
ui/screens/: connection_select.py  installers.py  terms.py  welcome.py  wired.py  wireless.py
